# perf-comp

./: README.md  dashboard-adminuser.yaml  nginx.yaml  pod-kubernetes-dashboard-74b66d7f9c-dg688.yaml
busybox/: deployment.yaml
deploy/: net.values.yaml  salvo.values.yaml  warp.values.yaml
deploy-hpa/: ingress.yaml
deploy-hpa/gofiberapi/: deployment.yaml  hpa.yaml  service.yaml
deploy-hpa/netcoreapi/: hpa.yaml
deploy-hpa/salvoapi/: deployment.yaml  hpa.yaml
deploy-hpa/warpapi/: deployment.yaml  hpa.yaml  service.yaml
deploy/apps/: gofiberapi.yaml  netcoreapi.yaml  ntexapi.yaml  warpapi.yaml
deploy/ingress/: ingress.yaml
deploy/netcoreapi/: deployment.yaml  service.yaml
deploy/salvoapi/: service.yaml
deploy/templates/: deployment.yaml  hpa.yaml  service.yaml
gofiber_api/: Dockerfile
gofiber_api/src/: main.go
netcore_api/: Dockerfile
node_api/: Dockerfile
node_api/src/: index.js
ntex_api/: Cargo.toml  Dockerfile
ntex_api/src/: main.rs
salvo_api/: Cargo.toml  Dockerfile
salvo_api/src/: main.rs
spring_api/: Dockerfile
spring_api/src/main/java/api/: Application.java
tide_api/: Cargo.toml
tide_api/src/: main.rs
warp_api/: Cargo.toml  Dockerfile
warp_api/src/: main.rs
