[package]
name = "salvo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "*"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5" 
tracing = "0.1"
tracing-subscriber = "0.3"